--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,18 @@
 </head>
 <body>
   <header>
-    <button class="menu-btn" aria-label="Abrir menu" onclick="toggleMenu()" aria-expanded="false" aria-controls="sideMenu">☰</button>
+  <button class="menu-btn" aria-label="Abrir menu" onclick="toggleMenu()" aria-expanded="false" aria-controls="sideMenu">☰</button>
+  <div class="header-title">
     <h1>Converse com Jesus</h1>
-  </header>
+    <a 
+      href="https://wa.me/?text=Vem%20conversar%20com%20Jesus%20neste%20link%20🙏❤️%20%0Ahttps://0233dee9-7967-4f12-bafd-811beffbbd55-00-jpvzzlyvin0m.riker.replit.dev/" 
+      target="_blank" 
+      class="share-link"
+    >
+      Compartilhe ❤️
+    </a>
+  </div>
+</header>
 
   <!-- Menu lateral -->
   <nav id="sideMenu" class="side-menu" aria-hidden="true" aria-label="Configurações">
