--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Converse com Jesus</title>
+  <h1 class="glow-title" data-text="Converse com Jesus">Converse com Jesus</h1>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- CSS externo -->
