--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- CSS externo -->
-  <link rel="stylesheet" href="styles.css?v=1.2" />
+  <link rel="stylesheet" href="styles.css?v=1.3" />
 
   <!-- Manifest para instalação como app -->
   <link rel="manifest" href="manifest.json">
@@ -20,10 +20,8 @@
   <header>
     <button class="menu-btn" aria-label="Abrir menu" onclick="toggleMenu()" aria-expanded="false" aria-controls="sideMenu">☰</button>
     <div class="header-title">
-      <h1>Converse com Jesus</h1>
-      <a id="shareBtn" target="_blank" class="share-link">
-        Compartilhe ❤️
-      </a>
+      <h1 class="glow-title" data-text="Converse com Jesus">Converse com Jesus</h1>
+      <a id="shareBtn" target="_blank" class="share-link">Compartilhe ❤️</a>
     </div>
   </header>
 
@@ -36,14 +34,14 @@
       </button>
     </div>
 
-    <!-- Ativar voz -->
     <label>
       <input type="checkbox" id="voiceToggle" checked />
       Ativar voz
     </label>
 
-    <!-- Opções de vozes dinâmicas (populadas pelo JS) -->
-    <div id="voiceOptions"></div>
+    <div id="voiceOptions">
+      <!-- Radios dinâmicos serão preenchidos pelo script -->
+    </div>
   </nav>
 
   <!-- Overlay escuro -->
@@ -53,19 +51,10 @@
     <div class="chat-box" id="chat-box" role="log" aria-live="polite" aria-relevant="additions"></div>
 
     <form id="chat-form">
-      <input
-        type="text"
-        id="message-input"
-        placeholder="Digite sua mensagem..."
-        required
-        autocomplete="off"
-        aria-label="Mensagem para Jesus"
-      />
+      <input type="text" id="message-input" placeholder="Digite sua mensagem..." required autocomplete="off" aria-label="Mensagem para Jesus"/>
       <div class="button-group">
         <button class="chat-btn" type="submit">Enviar</button>
-        <button class="chat-btn" type="button" id="voice-btn" aria-label="Falar com Jesus">
-          Fale
-        </button>
+        <button class="chat-btn" type="button" id="voice-btn" aria-label="Falar com Jesus">Fale</button>
       </div>
     </form>
 
@@ -88,7 +77,6 @@
     </div>
   </div>
 
-  <!-- JS externo -->
   <script src="script.js?v=1.3"></script>
 </body>
 </html>
