--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Converse com Jesus</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Converse com Jesus</title>
 
   <!-- CSS externo -->
   <link rel="stylesheet" href="styles.css?v=1.3" />
@@ -12,7 +12,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1e1e1e">
 
-  <!-- Ícones para atalho na tela inicial -->
+  <!-- Ícones -->
   <link rel="icon" href="icons/icon-192.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="icons/icon-192.png" />
 </head>
@@ -38,7 +38,7 @@
       Ativar voz
     </label>
     <div id="voiceOptions">
-      <!-- Vozes serão preenchidas dinamicamente pelo script -->
+      <!-- As vozes “Voz 0, Voz 1…” serão geradas pelo script -->
     </div>
   </nav>
 
@@ -49,10 +49,19 @@
     <div class="chat-box" id="chat-box" role="log" aria-live="polite" aria-relevant="additions"></div>
 
     <form id="chat-form">
-      <input type="text" id="message-input" placeholder="Digite sua mensagem..." required autocomplete="off" aria-label="Mensagem para Jesus" />
+      <input
+        type="text"
+        id="message-input"
+        placeholder="Digite sua mensagem..."
+        required
+        autocomplete="off"
+        aria-label="Mensagem para Jesus"
+      />
       <div class="button-group">
         <button class="chat-btn" type="submit">Enviar</button>
-        <button class="chat-btn" type="button" id="voice-btn" aria-label="Falar com Jesus">Fale</button>
+        <button class="chat-btn" type="button" id="voice-btn" aria-label="Falar com Jesus">
+          Fale
+        </button>
       </div>
     </form>
 
@@ -75,7 +84,7 @@
     </div>
   </div>
 
-  <!-- Script externo -->
+  <!-- Script -->
   <script src="script.js?v=1.3"></script>
 </body>
 </html>
