--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Converse com Jesus</title>
 
   <!-- CSS externo -->
-  <link rel="stylesheet" href="styles.css?v=1.3" />
+  <link rel="stylesheet" href="styles.css?v=1.2" />
 
   <!-- Manifest para instalação como app -->
   <link rel="manifest" href="manifest.json">
@@ -20,7 +20,7 @@
   <header>
     <button class="menu-btn" aria-label="Abrir menu" onclick="toggleMenu()" aria-expanded="false" aria-controls="sideMenu">☰</button>
     <div class="header-title">
-      <h1 class="glow-title" data-text="Converse com Jesus">Converse com Jesus</h1>
+      <h1>Converse com Jesus</h1>
       <a id="shareBtn" target="_blank" class="share-link">Compartilhe ❤️</a>
     </div>
   </header>
@@ -33,13 +33,19 @@
         <img src="/icons/arrow-menu.svg" alt="Fechar" width="24" height="24"/>
       </button>
     </div>
+
     <label>
       <input type="checkbox" id="voiceToggle" checked />
       Ativar voz
     </label>
-    <div id="voiceOptions">
-      <!-- As vozes “Voz 0, Voz 1…” serão geradas pelo script -->
-    </div>
+    <label>
+      <input type="radio" name="voiceType" value="male" />
+      Voz masculina
+    </label>
+    <label>
+      <input type="radio" name="voiceType" value="female" checked />
+      Voz feminina
+    </label>
   </nav>
 
   <!-- Overlay escuro -->
@@ -84,7 +90,6 @@
     </div>
   </div>
 
-  <!-- Script -->
-  <script src="script.js?v=1.4"></script>
+  <script src="script.js?v=1.2"></script>
 </body>
 </html>
