--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 <div class="menu-section">
   <a href="#" id="salmoLink" class="salmo-link">
     Peça seu salmo ou oração
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg"
+    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Logo_of_YouTube_%282015-2017%29.svg"
          alt="YouTube" class="yt-icon" />
   </a>
 </div>
