--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,8 @@
       Voz feminina
     </label>
 
+    <hr class="menu-separator">
+
     <!-- Link para pedir salmo/oração -->
 <div class="menu-section">
   <a href="#" id="salmoLink" class="salmo-link">
