--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
     <!-- Link para pedir salmo/oração -->
 <div class="menu-section">
   <a href="#" id="salmoLink" class="salmo-link">
-    Peça seu salmo ou oração
+    Busque o seu salmo ou oração
     <img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Logo_of_YouTube_%282015-2017%29.svg"
          alt="YouTube" class="yt-icon" />
   </a>
