--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
     <h3>Envie uma sugestão ou reclamação</h3>
 
     <form id="feedbackForm"
-          action="https://formspree.io/f/SEU_ENDPOINT"  <!-- 🔗 TROQUE AQUI -->
+          action="https://formspree.io/f/xdkwapdz"  <!-- 🔗 TROQUE AQUI -->
           method="POST">
 
       <label for="nome">Nome (opcional)</label><br>
