--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
     <!-- Sugestão / Reclamação -->
 <div class="menu-section">
   <h4>Envie sua sugestão ou reclamação</h4>
-  <form id="sugestaoForm" action="https://formspree.io/f/<SEU_CODIGO>" method="POST" target="_blank">
+  <form id="sugestaoForm" action="https://formspree.io/f/xdkwapdz" method="POST" target="_blank">
     <textarea name="mensagem" placeholder="Digite aqui..." required></textarea>
     <button type="submit">Enviar</button>
   </form>
