--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <!-- Sugestão / Reclamação -->
-<div class="menu-section">
+<div class="feedback">
   <h4>Envie sua sugestão ou reclamação</h4>
   <form id="sugestaoForm" action="https://formspree.io/f/xdkwapdz" method="POST" target="_blank">
     <textarea name="mensagem" placeholder="Digite aqui..." required></textarea>
