--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,8 @@
       </a>
     </div>
 
+    <hr class="menu-separator">
+
     <!-- Sugestão / Reclamação -->
 <div class="feedback">
   <h4>Envie sua sugestão ou reclamação</h4>
