--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
     <hr class="menu-separator">
 
 <!-- Sugestão / Reclamação -->
-<div class="menu-section">
+<div class="feedback">
   <h4>Envie sua sugestão ou reclamação</h4>
   <form id="sugestaoForm" action="https://formspree.io/f/xdkwapdz" method="POST">
     <textarea name="mensagem" placeholder="Digite aqui..." required></textarea>
