--- a/public/index.html
+++ b/public/index.html
@@ -123,11 +123,12 @@
     </div>
   </div>
 
-  <!-- Pop-up de confirmação -->
+  <!-- Pop-up de confirmação centralizado -->
+<div id="sugestaoOverlay" class="sugestao-overlay" style="display:none;"></div>
 <div id="sugestaoPopup" class="sugestao-popup" style="display:none;">
   Mensagem enviada com sucesso!
 </div>
-
+  
   <script src="script.js?v=1.7"></script>
 
 </body>
