--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,8 @@
   </form>
 </div>
   </nav>
-
+  
+<!--=== Pagina principal ===--->
   <!-- Overlay escuro -->
   <div id="overlay"></div>
 
@@ -99,7 +100,7 @@
     </div>
   </main>
 
-  <!-- Fundo escurecido -->
+  <!-- Fundo escurecido instalação -->
   <div id="installOverlay" class="install-overlay" style="display:none;"></div>
 
   <!-- Pop-up de instalação -->
@@ -123,10 +124,10 @@
     </div>
   </div>
 
-  <!-- Pop-up de confirmação centralizado -->
+  <!-- Pop-up de confirmação Sugestão -->
 <div id="sugestaoOverlay" class="sugestao-overlay" style="display:none;"></div>
 <div id="sugestaoPopup" class="sugestao-popup" style="display:none;">
-  Mensagem enviada com sucesso!
+  ✅ Mensagem enviada com sucesso!
 </div>
   
   <script src="script.js?v=1.7"></script>
