--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,8 @@
     <button type="submit">Enviar</button>
   </form>
 </div>
+
+    <hr class="menu-separator">
   </nav>
   
 <!--=== Pagina principal ===--->
