--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
   <h4>Envie sua sugestão ou reclamação</h4>
   <form id="sugestaoForm" action="https://formspree.io/f/xdkwapdz" method="POST">
     <textarea name="mensagem" placeholder="Digite aqui..." required></textarea>
-    <button type="submit">Enviar</button>
+    <button id="feedback-btn" type="submit">Enviar</button>
   </form>
 </div>
 
