--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,8 @@
     <hr class="menu-separator">
   </nav>
   
-<!--=== Pagina principal ===--->
+<!--=== 🔹Chat 1: Jesus responde ===--->
+  
   <!-- Overlay escuro -->
   <div id="overlay"></div>
 
@@ -95,11 +96,26 @@
         </button>
       </div>
     </form>
-
     <div class="loading" id="loading" style="display: none;">
       <div class="spinner" aria-hidden="true"></div>
       <span><strong>Jesus</strong> quer falar com você...</span>
+  </div>
+
+    <!--== 🔹Chat 2: Palavra de Sabedoria ==-->
+    
+<div id="biblia-chat" class="chat-container">
+  <h2 class="chat-title">📖 Palavra de Sabedoria</h2>
+  <div class="chat-box" id="biblia-chat-box">
+    <div class="bot-message">
+      Nos diga qual a sua dificuldade hoje e a palavra através da Bíblia traremos uma resposta.
     </div>
+  </div>
+  <div class="chat-input">
+    <input type="text" id="biblia-input" placeholder="Digite sua dificuldade...">
+    <button id="biblia-send">Enviar</button>
+  </div>
+</div>
+
   </main>
 
   <!-- Fundo escurecido instalação -->
