--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
   <h2 class="chat-title">📖 Palavra de Sabedoria</h2>
   <div class="chat-box" id="biblia-chat-box">
     <div class="bot-message">
-      Nos diga qual a sua dificuldade hoje e a palavra através da Bíblia traremos uma resposta.
+      Nos diga qual a sua dificuldade hoje e a palavra através da Bíblia trará uma resposta.
     </div>
   </div>
   <div class="chat-input">
