--- a/public/index.html
+++ b/public/index.html
@@ -105,10 +105,13 @@
     
 <div id="biblia-chat" class="chat-container">
   <h2 class="chat-title">📖 Palavra de Sabedoria</h2>
-  <div class="chat-box" id="biblia-chat-box">
-    <div class="bot-message">
+  <div class="bot-message">
       Nos diga qual a sua dificuldade hoje e a palavra através da Bíblia trará uma resposta.
-    </div>
+  </div>
+  <div class="chat-box" id="biblia-chat-box">
+  </div>
+  <div class="bot-message">
+      <!-- Aqui vai o chat -->
   </div>
   <div class="chat-input">
     <input type="text" id="biblia-input" placeholder="Digite sua dificuldade...">
