--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
     
 <div id="biblia-chat" class="chat-container">
   <h2 class="chat-title">📖 Palavra de Sabedoria</h2>
-  <div class="bot-message">
+  <div class="intro-text">
       Nos diga qual a sua dificuldade hoje e a palavra através da Bíblia trará uma resposta.
   </div>
   <div class="chat-box" id="biblia-chat-box">
