--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,8 @@
 
   <main class="container">
     <div class="chat-box" id="chat-box" role="log" aria-live="polite" aria-relevant="additions"></div>
-
+    <h2 class="chat-title">🕊️Fale com Jesus</h2>
+    
     <form id="chat-form">
       <input
         type="text"
