--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
 <main class="container">
   
   <!-- Botão do Chat 1 -->
-  <button class="chat-toggle" id="toggle-jesus">🕊️ Fale com Jesus</button>
+  <button class="chat-toggle chat2-toggle" id="toggle-jesus">🕊️ Fale com Jesus</button>
 
   <!-- Conteúdo do Chat 1 -->
   <div class="chat-container" id="chat-jesus-container">
@@ -109,7 +109,7 @@
   </div>
 
   <!--== 🔹Chat 2: Palavra de Sabedoria ==-->
-  <button class="chat-toggle" id="toggle-biblia">📖 Palavra de Sabedoria</button>
+  <button class="chat2-toggle" id="toggle-biblia">📖 Palavra de Sabedoria</button>
 
   <div class="chat-container" id="biblia-chat-container">
     <div class="intro-text">
