--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
       <input
         type="text"
         id="biblia-input"
-        placeholder="Digite sua dificuldade..."
+        placeholder="Hoje eu estou..."
         required
         autocomplete="off"
         aria-label="Mensagem para Palavra de Sabedoria"
