--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
 
   <div class="chat-container" id="biblia-chat-container">
     <div class="intro-text">
-      Nos diga qual a sua dificuldade hoje e a palavra através da Bíblia trará uma resposta.
+      Nos diga qual a sua dificuldade hoje e a palavra através da Bíblia, te trará uma resposta.
     </div>
 
     <div class="chat-box" id="biblia-chat-box"></div>
