--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
       <input
         type="text"
         id="biblia-input"
-        placeholder="Hoje eu estou..."
+        placeholder="Ex.: Hoje eu estou ancioso buscando renda extra..."
         required
         autocomplete="off"
         aria-label="Mensagem para Palavra de Sabedoria"
