--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
       <input
         type="text"
         id="biblia-input"
-        placeholder="Ex: Como posso lidar com..."
+        placeholder="Ex: Como lidar com..."
         required
         autocomplete="off"
         aria-label="Mensagem para Palavra de Sabedoria"
