--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,13 @@
 </div>
 
     <hr class="menu-separator">
+
+<div class="menu-footer">
+  <p>🤖 <strong>IA fornecida por</strong><br>
+  <a href="https://openrouter.ai" target="_blank">OpenRouter & DeepSeek</a></p>
+  <p>🕊️ <strong>Desenvolvido por</strong><br>
+  Luciano Franco</p>
+</div>
   </nav>
   
 <!--=== 🔹Chat 1: Jesus responde ===--->
