--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,8 @@
 </div>
 
     <hr class="menu-separator">
-
+    
+<!-- Creditos -->
 <div class="menu-footer">
   <p>🤖 <strong>IA fornecida por</strong><br>
   <a href="https://openrouter.ai" target="_blank">OpenRouter & DeepSeek</a></p>
