--- a/public/index.html
+++ b/public/index.html
@@ -72,12 +72,14 @@
     <hr class="menu-separator">
     
 <!-- Creditos -->
-<div class="menu-footer">
-  <p>🤖 <strong>IA fornecida por</strong><br>
-  <a href="https://openrouter.ai" target="_blank">OpenRouter & DeepSeek</a></p>
-  <p>🕊️ <strong>Desenvolvido por</strong><br>
-  Luciano Franco</p>
-</div>
+    <footer>
+      <div class="menu-footer">
+        <p>🤖 <strong>IA fornecida por</strong><br>
+          <a href="https://openrouter.ai" target="_blank">OpenRouter & DeepSeek</a></p>
+        <p>🕊️ <strong>Desenvolvido por</strong><br>
+          ©LabSeven</p>
+      </div>
+    </footer>
   </nav>
   
 <!--=== 🔹Chat 1: Jesus responde ===--->
