--- a/public/index.html
+++ b/public/index.html
@@ -71,14 +71,10 @@
 
     <hr class="menu-separator">
     
-<!-- Creditos -->
-    <footer>
-      <div class="menu-footer">
-        <p>🤖 <strong>IA fornecida por</strong><br>
-          <a href="https://openrouter.ai" target="_blank">OpenRouter & DeepSeek</a></p>
-        <p>🕊️ <strong>Desenvolvido por</strong><br>
-          ©LabSeven</p>
-      </div>
+    <!-- Creditos -->
+    <footer class="menu-footer">
+      <p>✨ Desenvolvido por <strong>©LabSeven</strong></p>
+      <p>🤖 IA fornecida por <a href="https://openrouter.ai" target="_blank">OpenRouter</a></p>
     </footer>
   </nav>
   
