--- a/public/index.html
+++ b/public/index.html
@@ -142,6 +142,13 @@
     </form>
   </div>
 
+  <!--=== 🔹Salmo do Dia ===--->
+<button class="chat-toggle" id="salmo-toggle">📖 Salmo do Dia</button>
+
+<div id="salmo-container" class="chat-box" style="display: none;">
+  <p id="salmo-texto">Carregando salmo...</p>
+</div>
+
   </main>
   <!-- Fundo escurecido instalação -->
   <div id="installOverlay" class="install-overlay" style="display:none;"></div>
