--- a/public/index.html
+++ b/public/index.html
@@ -181,7 +181,7 @@
 </div>
   
   <script src="script.js?v=1.7"></script>
-  <script src="salmo-dia-api.js"></script>
+  <script src="salmo-dia-api?v=1.0.js"></script>
 
 </body>
         </html>
