--- a/public/index.html
+++ b/public/index.html
@@ -180,8 +180,8 @@
   ✅ Mensagem enviada com sucesso!
 </div>
   
-  <script src="script.js?v=1.7"></script>
-  <script src="salmo-dia-api?v=1.0.js"></script>
+<script src="salmo-dia-api.js?v=1.0"></script>
+<script src="script.js?v=1.7"></script>
 
 </body>
         </html>
