--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@
   ✅ Mensagem enviada com sucesso!
 </div>
   
-<script src="salmo-dia-api.js?v=1.0"></script>
+<script src="script-salmos.js"></script>
 <script src="script.js?v=1.7"></script>
 
 </body>
