--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
   <!--=== 🔹Salmo do Dia ===--->
 <button class="chat-toggle" id="salmo-toggle">📖 Salmo do Dia</button>
 
-<div id="salmo-container" class="chat-box" style="display: none;">
+<div id="salmo-container" class="chat-box";">
   <p id="salmo-texto">Carregando salmo...</p>
 </div>
 
