--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
   </div>
 
   <!--=== 🔹Salmo do Dia ===--->
-<button class="chat-toggle" id="salmo-toggle">📖 Salmo do Dia</button>
+<button class="chat-toggle" id="salmo-toggle">📜 Salmo do Dia</button>
 
 <div id="salmo-container" class="chat-box";">
   <p id="salmo-texto">Carregando salmo...</p>
