--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,7 @@
 
 <div id="salmo-container" class="chat-box";">
   <p id="salmo-texto">Carregando salmo...</p>
+  <button id="salmo-ouvir-btn">🔊 Ouvir</button>
 </div>
 
   </main>
