--- a/public/index.html
+++ b/public/index.html
@@ -34,15 +34,16 @@
       </button>
     </div>
 
-    <label>
+    <label class="config-desativada">
+      <h2>Em breve!</h2>
       <input type="checkbox" id="voiceToggle" checked />
       Ativar voz
     </label>
-    <label>
+    <label class="config-desativada">
       <input type="radio" name="voiceType" value="male" />
       Voz masculina
     </label>
-    <label>
+    <label class="config-desativada">
       <input type="radio" name="voiceType" value="female" checked />
       Voz feminina
     </label>
