--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <button class="menu-btn" aria-label="Abrir menu" onclick="toggleMenu()" aria-expanded="false" aria-controls="sideMenu">☰</button>
+    <button class="menu-btn" aria-label="Abrir menu" aria-expanded="false" aria-controls="sideMenu">☰</button>
     <div class="header-title">
       <h1>Converse com Jesus</h1>
       <a id="shareBtn" target="_blank" class="share-link">Compartilhe ❤️</a>
