--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <label>
-      <h3>Em breve!</h3>
+      <p>Em breve!</p>
       <input type="checkbox" id="voiceToggle" checked />
       Ativar voz
     </label>
