--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
       </button>
     </div>
 
+    <h4>Em breve!<h4>
     <label>
-      <p>Em breve!</p>
       <input type="checkbox" id="voiceToggle" checked />
       Ativar voz
     </label>
