--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
       </button>
     </div>
 
+    <hr class="menu-separator">
+    
     <h4>Em breve!<h4>
     <label>
       <input type="checkbox" id="voiceToggle" checked />
