--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
     <hr class="menu-separator">
     
-    <h4>Em breve!<h4>
+    <h4 class="coming-soon">Em breve!</h4>
     <label>
       <input type="checkbox" id="voiceToggle" checked />
       Ativar voz
