--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
 
 <div id="salmo-container" class="chat-box">
   <p id="salmo-texto">Carregando salmo...</p>
-  <button id="salmo-ouvir-btn">🔊 Ouvir</button>
+  <button id="salmo-ouvir-btn">🔊 Ouvir Salmo</button>
 </div>
 
   </main>
