--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,12 @@
     <hr class="menu-separator">
     
     <h4 class="coming-soon">Em breve!</h4>
+    <label style="color:#888888;">
+      Teste de voz:
+      <button id="testeVoz" style="color:#888888; background:none; border:1px solid #888888; padding:4px 8px; border-radius:4px; cursor:pointer;">
+    🔊 Testar Voz
+      </button>
+    </label>
     <label>
       <input type="checkbox" id="voiceToggle" checked />
       Ativar voz
