--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <label style="color:#888888;">
       Teste de voz:
       <button id="testeVoz" style="color:#888888; background:none; border:1px solid #888888; padding:4px 8px; border-radius:4px; cursor:pointer;">
-    🔊 Testar Voz
+        🔊 Ver vozes
       </button>
     </label>
     <label>
