--- a/public/index.html
+++ b/public/index.html
@@ -36,25 +36,10 @@
 
     <hr class="menu-separator">
     
-    <h4 class="coming-soon">Em breve!</h4>
-    <label style="color:#888888;">
-      Teste de voz:
-      <button id="testeVoz" style="color:#888888; background:none; border:1px solid #888888; padding:4px 8px; border-radius:4px; cursor:pointer;">
-        🔊 Ver vozes
-      </button>
-    </label>
-    <label>
-      <input type="checkbox" id="voiceToggle" checked />
-      Ativar voz
-    </label>
-    <label>
-      <input type="radio" name="voiceType" value="male" />
-      Voz masculina
-    </label>
-    <label>
-      <input type="radio" name="voiceType" value="female" checked />
-      Voz feminina
-    </label>
+    <!-- Botão dentro do menu lateral -->
+    <button id="abrirTutorialVozBtn" class="menu-voz-btn">
+      ⚙️ Configurar Voz
+    </button>
 
     <hr class="menu-separator">
 
