--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,9 @@
     <hr class="menu-separator">
     
     <!-- Botão dentro do menu lateral -->
-    <button id="abrirTutorialVozBtn" class="menu-voz-btn">
-      ⚙️ Configurar Voz
-    </button>
+    <div class="botao-tutorial-wrapper">
+      <button class="menu-voz-btn">🔊 Configuração de Voz</button>
+    </div>
 
     <hr class="menu-separator">
 
