--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <title>Converse com Jesus</title>
 
   <!-- CSS externo -->
-  <link rel="stylesheet" href="styles.css?v=1.8" />
+  <link rel="stylesheet" href="styles.css?v=1.8
+    9" />
 
   <!-- Manifest para instalação como app -->
   <link rel="manifest" href="manifest.json">
