--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     
     <!-- Botão dentro do menu lateral -->
     <div class="botao-tutorial-wrapper">
-      <button class="menu-voz-btn">🔊 Configuração de Voz</button>
+      <button id="tutorialBtn" class="menu-voz-btn">🔊 Configuração de Voz</button>
     </div>
 
     <hr class="menu-separator">
