--- a/public/index.html
+++ b/public/index.html
@@ -174,6 +174,25 @@
 <div id="sugestaoPopup" class="sugestao-popup" style="display:none;">
   ✅ Mensagem enviada com sucesso!
 </div>
+
+  <!-- Pop-up tutorial -->
+ <!-- Overlay do tutorial -->
+<div id="tutorialOverlay" class="tutorial-overlay" style="display:none;"></div>
+
+<!-- Pop-up do tutorial -->
+<div id="tutorialPopup" class="tutorial-popup" style="display:none;">
+  <div class="tutorial-content">
+    <h3>Tutorial de Configuração de Voz</h3>
+    <div id="tutorialStep" class="tutorial-step">
+      <!-- O conteúdo de cada etapa será inserido pelo JS -->
+    </div>
+    <div class="tutorial-buttons">
+      <button id="prevStepBtn">⬅ Voltar</button>
+      <button id="nextStepBtn">Próximo ➡</button>
+      <button id="closeTutorialBtn">Fechar ✖</button>
+    </div>
+  </div>
+  </div> 
   
 <script src="script.js?v=2.1"></script>
 <script src="script-salmos.js"></script>
