--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
 <main class="container">
   
   <!-- Botão do Chat 1 -->
-  <button class="chat-toggle" id="toggle-jesus">🕊️ Fale com Jesus</button>
+  <button class="chat-toggle" id="toggle-jesus">🕊️ Fale para Jesus</button>
 
   <!-- Conteúdo do Chat 1 -->
   <div class="chat-container" id="chat-jesus-container">
@@ -104,7 +104,7 @@
 
     <div class="loading" id="loading" style="display: none;">
       <div class="spinner" aria-hidden="true"></div>
-      <span><strong>Jesus</strong> quer falar com você...</span>
+      <span>Um Anjo tem um recado de <strong>Jesus...</strong>strong></span>
     </div>
   </div>
 
