--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 
     <div class="loading" id="loading" style="display: none;">
       <div class="spinner" aria-hidden="true"></div>
-      <span>Um Anjo tem um recado de <strong>Jesus...</strong>strong></span>
+      <span>Um Anjo tem um recado de <strong>Jesus...</strong></span>
     </div>
   </div>
 
