--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,19 @@
   <link rel="apple-touch-icon" href="icons/icon-192.png" />
 </head>
 <body>
+
+  <!-- Pop-up para escolher pronome -->
+<div id="pronomeOverlay" class="overlay">
+  <div class="pronome-popup">
+    <h3>Como devemos chamá-lo(a)?</h3>
+    <p>Escolha para que Jesus possa se dirigir a você corretamente:</p>
+    <div class="pronome-buttons">
+      <button id="btnFilho">Filho</button>
+      <button id="btnFilha">Filha</button>
+    </div>
+  </div>
+</div>
+  
   <header>
     <button class="menu-btn" aria-label="Abrir menu" aria-expanded="false" aria-controls="sideMenu">☰</button>
     <div class="header-title">
