--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Converse com Jesus</title>
 
   <!-- CSS externo -->
-  <link rel="stylesheet" href="styles.css?v=1.9" />
+  <link rel="stylesheet" href="styles.css?v=2.0" />
 
   <!-- Manifest para instalação como app -->
   <link rel="manifest" href="manifest.json">
@@ -207,8 +207,8 @@
   </div>
   </div> 
   
-<script src="script.js?v=2.1"></script>
-<script src="script-salmos.js"></script>
+<script src="script.js?v=2.2"></script>
+<script src="script-salmos.js?v=1.0"></script>
   
 </body>
 </html>
