--- a/public/index.html
+++ b/public/index.html
@@ -209,6 +209,12 @@
   
 <script src="script.js?v=2.3"></script>
 <script src="script-salmos.js?v=1.1"></script>
+
+<!-- Eruda: mini DevTools para celular -->
+<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+<script>
+  eruda.init(); // ativa o painel flutuante
+</script>
   
 </body>
 </html>
