--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Converse com Jesus</title>
 
   <!-- CSS externo -->
-  <link rel="stylesheet" href="styles.css?v=2.2" />
+  <link rel="stylesheet" href="styles.css" />
 
   <!-- Manifest para instalação como app -->
   <link rel="manifest" href="manifest.json">
@@ -213,8 +213,8 @@
   </div>
   </div> 
   
-<script src="script.js?v=2.4"></script>
-<script src="script-salmos.js?v=1.2"></script>
+<script src="script.js"></script>
+<script src="script-salmos.js"></script>
 
 <!-- Eruda: mini DevTools para celular -->
 <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
