--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,10 @@
 <main class="container">
   
   <!-- Botão do Chat 1 -->
+ <div class="chat-toggle-group">
   <button class="chat-toggle" id="toggle-jesus">🕊️ Fale para Jesus</button>
+  <button class="ad-btn" id="ad-jesus" title="Assistir anúncio para abrir">🎥</button>
+ </div>
 
   <!-- Conteúdo do Chat 1 -->
   <div class="chat-container" id="chat-jesus-container">
@@ -225,6 +228,7 @@
   
 <script src="script.js"></script>
 <script src="script-salmos.js"></script>
+<script src="script-ads.js"></script>
 
 <!-- Eruda: mini DevTools para celular -->
 <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
