--- a/public/index.html
+++ b/public/index.html
@@ -109,8 +109,7 @@
   
   <!-- Botão do Chat 1 -->
  <div class="chat-toggle-group">
-  <button class="chat-toggle" id="toggle-jesus">🕊️ Fale para Jesus</button>
-  <button class="ad-btn" id="ad-jesus" title="Assistir anúncio para abrir">🎥</button>
+  <button class="chat-toggle" id="toggle-jesus">🕊️ Fale para Jesus <button class="ad-btn" id="ad-jesus" title="Assistir anúncio para abrir">🎥</button></button>
  </div>
 
   <!-- Conteúdo do Chat 1 -->
