--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
   
   <!-- Botão do Chat 1 -->
  <div class="chat-toggle-group">
-  <button class="chat-toggle" id="toggle-jesus">🕊️ Fale para Jesus <button class="ad-btn" id="ad-jesus" title="Assistir anúncio para abrir">🎥</button></button>
+  <button class="chat-toggle" id="toggle-jesus">🕊️ Fale para Jesus <div class="toggle-ads">🎥</div></button>
  </div>
 
   <!-- Conteúdo do Chat 1 -->
