--- a/public/index.html
+++ b/public/index.html
@@ -108,9 +108,10 @@
 <main class="container">
   
   <!-- Botão do Chat 1 -->
- <div class="chat-toggle-group">
-  <button class="chat-toggle" id="toggle-jesus">🕊️ Fale para Jesus <div class="toggle-ads">🎥</div></button>
- </div>
+ <button class="chat-toggle" id="toggle-jesus" data-target="chat-jesus-container">
+  🕊️ Fale para Jesus <div class="toggle-ads">🎥</div>
+ </button>
+
 
   <!-- Conteúdo do Chat 1 -->
   <div class="chat-container" id="chat-jesus-container">
