--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
 <main class="container">
   
   <!-- Botão do Chat 1 -->
- <button class="chat-toggle" id="toggle-jesus" data-target="chat-jesus-container">
+ <button onclick="abrirToggleComRecompensa('chat-jesus-container')" class="chat-toggle">
   🕊️ Fale para Jesus <div class="toggle-ads">🎥</div>
  </button>
 
@@ -141,7 +141,9 @@
   </div>
 
   <!--== 🔹Chat 2: Palavra de Sabedoria ==-->
-  <button class="chat-toggle" id="toggle-biblia">📖 Palavra de Sabedoria</button>
+  <button onclick="abrirToggleComRecompensa('biblia-chat-container')" class="chat-toggle">
+  📖 Palavra de Sabedoria
+  </button>
 
   <div class="chat-container" id="biblia-chat-container">
     <div class="intro-text">
@@ -169,7 +171,9 @@
   </div>
 
   <!--=== 🔹Salmo do Dia ===--->
-<button class="chat-toggle" id="salmo-toggle">📜 Salmo do Dia</button>
+<button onclick="abrirToggleComRecompensa('salmo-container')" class="chat-toggle">
+  📜 Salmo do Dia
+</button>
 
 <div id="salmo-container" class="chat-box">
   <p id="salmo-texto">Carregando salmo...</p>
