--- a/public/index.html
+++ b/public/index.html
@@ -108,9 +108,9 @@
 <main class="container">
   
   <!-- Botão do Chat 1 -->
- <button onclick="abrirToggleComRecompensa('chat-jesus-container')" class="chat-toggle">
+<button class="chat-toggle" onclick="abrirToggleComRecompensa('chat-jesus-container')">
   🕊️ Fale para Jesus <div class="toggle-ads">🎥</div>
- </button>
+</button>
 
 
   <!-- Conteúdo do Chat 1 -->
@@ -141,7 +141,7 @@
   </div>
 
   <!--== 🔹Chat 2: Palavra de Sabedoria ==-->
-  <button onclick="abrirToggleComRecompensa('biblia-chat-container')" class="chat-toggle">
+  <button class="chat-toggle" onclick="abrirToggleComRecompensa('biblia-chat-container')">
   📖 Palavra de Sabedoria
   </button>
 
@@ -171,7 +171,7 @@
   </div>
 
   <!--=== 🔹Salmo do Dia ===--->
-<button onclick="abrirToggleComRecompensa('salmo-container')" class="chat-toggle">
+<button class="chat-toggle" onclick="abrirToggleComRecompensa('salmo-container')">
   📜 Salmo do Dia
 </button>
 
